# avbd-demo2d

./: .gitignore  CMakeLists.txt  README.md  VERIFICATION.md
source/: joint.cpp  manifold.cpp  record.h  rigid.cpp  solver.h  spring.cpp
tests/: tests.cpp
tools/: generate.cpp
